# OpenGLEgitim

./: LICENSE  README.md
DaireCizimi/: CMakeLists.txt
DaireCizimi/include/: shaderprogram.hpp
DaireCizimi/shaders/: simplevs.glsl
DaireCizimi/src/: main.cpp
Egitim/: CMakeLists.txt
Egitim/include/: square.hpp
Egitim/include/glad/: glad.h
Egitim/shaders/: simplefs.glsl  simplevs.glsl
Egitim/src/: glad.c  main.cpp  square.cpp
GLFWSinifi/: CMakeLists.txt
GLFWSinifi/include/: OpenGLManager.hpp  Scene.hpp  WindowTransform.hpp
GLFWSinifi/src/: OpenGLManager.cpp  VertexArrayObjectManager.cpp  main.cpp  shaderprogram.cpp  texturemanager.cpp
ImGui/: CMakeLists.txt
ImGui/include/: MeshManager.hpp
ImGui/src/: MeshManager.cpp  Scene.cpp  WindowTransform.cpp  main.cpp
KameraVeProjecsiyon/: CMakeLists.txt
KameraVeProjecsiyon/include/: VertexArrayObject.hpp
KameraVeProjecsiyon/src/: VertexArrayObject.cpp  main.cpp
Kaplama/: CMakeLists.txt
Kaplama/include/: texturemanager.hpp
Kaplama/shaders/: simplefs.glsl  simplevs.glsl
Kaplama/src/: main.cpp  shaderprogram.cpp  texturemanager.cpp
Mesh/: CMakeLists.txt
Mesh/include/: MeshManager.hpp  VertexArrayObject.hpp
Mesh/shaders/: simplevs.glsl
Mesh/src/: MeshManager.cpp  main.cpp
SahneAgaci/: CMakeLists.txt  imgui.ini
SahneAgaci/include/: Arrow.hpp  Mesh.hpp  MeshManager.hpp  Scene.hpp  SceneNode.hpp  Transform.hpp  WindowScene.hpp  WindowTransform.hpp  texturemanager.hpp
SahneAgaci/shaders/: colorvs.glsl  simplefs.glsl
SahneAgaci/src/: Arrow.cpp  Mesh.cpp  MeshManager.cpp  Scene.cpp  SceneNode.cpp  Transform.cpp  WindowScene.cpp  WindowTransform.cpp  main.cpp
Silindir/: CMakeLists.txt  imgui.ini
Silindir/include/: MeshManager.hpp  Timer.hpp  VertexArrayObject.hpp
Silindir/shaders/: colorfs.glsl
Silindir/src/: MeshManager.cpp  OpenGLManager.cpp  VertexArrayObject.cpp  main.cpp
Timer/: CMakeLists.txt
Timer/include/: Mesh.hpp  VertexTypes.hpp  shaderprogram.hpp
Timer/src/: VertexArrayObject.cpp  main.cpp
Yonlendirme/: CMakeLists.txt
Yonlendirme/include/: OpenGLManager.hpp  Transform.hpp  VertexArrayObjectManager.hpp  VertexTypes.hpp  WindowTransform.hpp
Yonlendirme/shaders/: colorvs.glsl
Yonlendirme/src/: Timer.cpp  Transform.cpp  WindowTransform.cpp  main.cpp
buildDaireCizimi/: CMakeCache.txt  Makefile  cmake_install.cmake
buildKaplama/: CMakeCache.txt  Makefile  cmake_install.cmake
